Add .project and .classpath to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,9 @@ local.properties
 .loadpath
 .recommenders
 
+# Eclipse Core
+.project
+
 # External tool builders
 .externalToolBuilders/
 
@@ -61,6 +64,9 @@ local.properties
 
 # CDT-specific (C/C++ Development Tooling)
 .cproject
+
+# JDT-specific (Eclipse Java Development Tools)
+.classpath
 
 # Java annotation processor (APT)
 .factorypath
