--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,14 @@
 			<version>1.9.5</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>nl.jqno.equalsverifier</groupId>
+			<artifactId>equalsverifier</artifactId>
+			<version>2.3.3</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<reporting>
